<resources>
    <string name="app_name">Salmo 23</string>
    <string name="oracao1">“1. O Senhor é o meu pastor, nada me faltará. 2. Deitar-me faz em verdes pastos, guia-me mansamente a águas tranquilas. 3. Refrigera a minha alma; guia-me pelas veredas da justiça, por amor do seu nome. 4. Ainda que eu andasse pelo vale da sombra da morte, não temeria mal algum, porque Tu estás comigo; a tua vara e o teu cajado me consolam. 5. Preparas uma mesa perante a mim na presença dos meus inimigos, unges a minha cabeça com óleo, o meu cálice transborda. 6. Certamente que a bondade e a misericórdia divina me seguirão todos os dias da minha vida; e habitarei na casa do Senhor por longos dias.”</string>


    <string name="dialog_text_no_ads_title">Desativar anúncios</string>
    <string name="dialog_text_no_premium_wallpapers_title">Conteúdo premium</string>
    <string name="dialog_text_no_premium_wallpapers_description">Obtenha adesivos ilimitados</string>
    <string name="dialog_text_no_ads_description">Use o aplicativo de forma mais gratuita, sem anúncios</string>
    <string name="description_subsribte">Com nosso pacote. Você pode desfrutar de uma experiência sem anúncios. e foque no essencial!</string>

    <string name="notification_channel_id">default</string>
    <string name="result">Something will happen here&#8230;</string>
    <string name="subscribed">Subscribed to news topic</string>

    <string name="tray_image_content_description">Imagem da bandeja do pacote de adesivos</string>
    <string name="more_info_button">Mais informações sobre o pacote de adesivos</string>
    <string name="add_to_whatsapp">Adicionar ao WhatsApp</string>
    <string name="add_button_content_description">Adicionar pacote de autocolantes ao WhatsApp</string>
    <string name="dot">•</string>
    <string name="title_activity_sticker_pack_info">Informações</string>
    <string name="view_webpage">Ver no Google Play</string>
    <string name="send_email">Send email</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="error_adding_sticker_pack">Could not add this sticker pack. Please install the latest version of WhatsApp before adding sticker pack</string>
    <string name="error_message">Error: %s \nSee logcat for stack trace.</string>
    <string name="title_validation_error">Error with the pack</string>
    <string name="info_screen_tray_icon">Icone do Pacote</string>
    <string name="details_pack_already_added">Pacote de adesivos adicionado ao WhatsApp</string>
    <string name="info_send_email_to_prompt">Send email with</string>
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>


    <!--NOVOS-->


    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_new_sticker_pack">Novo pacote</string>

    <!-- Strings related to NewStickerPackActivity -->
    <string name="prompt_name">Nome</string>
    <string name="prompt_author">Autor</string>

    <!--Background remover -->
    <string name="We_need_some_permissions_to_work_with_stickers">Precisamos de algumas permissões para trabalhar com adesivos.</string>
    <string name="GRANT_ACCESS">GARANTIR ACESSO</string>
    <string name="save">Salvar</string>
    <string name="deleteee">Excluir</string>


    <string name="save_in_gallery">Salvar na galeria</string>
    <string name="Deleted">Excluído</string>
    <string name="Are_you_sure_you_want_to_delete_this_sticker_pack">Tem certeza de que deseja excluir este pacote de adesivos?</string>
    <string name="Deleting">Apagando</string>
    <string name="No">Não</string>
    <string name="Saved">Salvou</string>
    <string name="Image_removed">Imagem removida</string>
    <string name="We_need_access_to_write_and_read_files_in_your_phone">Precisamos de acesso para gravar e ler arquivos em seu telefone</string>
    <string name="Wait_a_moment_while_we_process_your_stickers">Aguarde um momento enquanto processamos seus adesivos...</string>
    <string name="Processing_images">Processando imagens</string>
    <string name="sim">Sim</string>
    <string name="You_have_to_fill_all_empty_spaces">Você tem que preencher todos os espaços vazios</string>
    <string name="There_are_no_sticker_packs_availablenCreate_and_try_your_own_awesome_stickers">Não há pacotes de adesivos disponíveis.\nCrie e experimente seus próprios adesivos incríveis.</string>
    <string name="no_stickers_selected">Nenhum adesivo selecionado</string>
    <string name="Add_to_sticker_pack">Add to sticker pack</string>
    <string name="select_images">SELECIONE AS IMAGENS</string>
    <string name="colocar_no_status">Status</string>
    <string name="novo_pacote">Novo Pacote</string>
    <string name="obrigadoporusaresteaplicativo">Obrigado por usar este aplicativo</string>
    <string name="Porfavoravalile5Estrelasedeixeseucomentario">Por favor avalile 5 Estrelas e deixe seu Comentario</string>
    <string name="sairr">Sair</string>
    <string name="estrelas5">5 Estrelas</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="ora_es">Orações</string>
    <string name="novena">Novenas</string>
    <string name="biblia">Bíblia</string>
    <string name="favoritos">Favoritos</string>
    <string name="concluidas">Concluídas</string>
    <string name="progresso">Seu progresso</string>
    <string name="descricao">Descrição</string>
    <string name="ora_es_favoritas">Orações favoritas</string>
    <string name="meus_pedidos">Meus pedidos</string>
    <string name="figurinhas">Figurinhas</string>
    <string name="criar">Criar</string>
    <string name="poderosas">Poderosas</string>
    <string name="vamos">Vamos</string>
    <string name="orar">" Orar "</string>
    <string name="hoje">hoje?</string>
    <string name="seja_premium">Seja Premium</string>
    <string name="voc_pode_desfrutar_de_uma_experi_ncia_sem_an_ncios_e_foque_no_essencial">Você pode desfrutar de uma experiência sem anúncios. e foque no essencial!</string>
    <string name="salvar_como_favorito">Salvar como favorito</string>
    <string name="para_acesso_mais_r_pido_ao_conte_do">Para acesso mais rápido ao conteúdo</string>
    <string name="sem_limites_de_reprodu_es_diarias">Sem limites de Reproduções diarias!</string>
    <string name="para_uma_conex_o_mais_profunda_com_deus">Para uma conexão mais profunda com Deus</string>
    <string name="atualiza_o_di_ria">Atualização diária</string>
    <string name="_1_m_s">1 Mês</string>
    <string name="_6_m_ses">6 Mêses</string>
    <string name="_1_ano">1 Ano</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="voc_atingiu_o_limite_di_rio_de_reprodu_es">Você atingiu o limite diário de reproduções.</string>
    <string name="assignee_j_e_tenha_acesso_exclusivo">Assine Já e Tenha Acesso Exclusivo!❤</string>
    <string name="tudo_bem">Tudo Bem!</string>
    <string name="bom_dia_aben_oado_a">Bom Dia, </string>
    <string name="boa_tarde_aben_oado_a">Boa Tarde, </string>
    <string name="boa_noite_aben_oado_a">Boa Noite, </string>
    <string name="voc_ainda_n_o_possui_favoritos">Você ainda não possui favoritos.</string>
    <string name="n_o_encontramos">Não encontramos!</string>
    <string name="contudo_estaremos_incluindo_em_breve">Contudo, estaremos incluindo em breve😊.</string>
    <string name="ouvir">Ouvir</string>
    <string name="parar">Parar</string>
    <string name="aguarde">Aguarde...</string>
    <string name="voc_atingiu_o_limite_de_favoritos_20">Você Atingiu o limite de Favoritos! 20</string>
</resources>