<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/error_message" />
    <ProgressBar
        android:id="@+id/entry_activity_progress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:theme="@style/AppTheme.WhiteAccent"
        />
    <TextView
        android:id="@+id/txt"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:gravity="center"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/result" />
    <TextView
        android:id="@+id/open1"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:gravity="center" />

    <FrameLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70sp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mines"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/praying"
                        android:text="@string/ora_es"
                        android:fontFamily="@font/google"
                        android:textColor="@color/gyellow"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/citytoolm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/maos"
                        android:text="@string/poderosas"
                        android:fontFamily="@font/google"
                        android:textColor="#737373"
                        android:textSize="30sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/vamos"
                        android:fontFamily="@font/google"
                        android:textColor="@color/grey1" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/orar"
                        android:fontFamily="@font/google"
                        android:textColor="@color/green" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/hoje"
                        android:fontFamily="@font/google"
                        android:textColor="@color/grey1" />

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="200sp"
        android:background="@drawable/login_shape_bk"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#ffffff"
                android:textSize="30sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/nuvem"
        android:orientation="vertical" />
</RelativeLayout>