<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    tools:context=".activities.NewStickerPackActivity">

    <ScrollView
        android:id="@+id/stickerpack_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/stricker_pack_form_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#737373"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/sticker_pack_name_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google"
                    android:hint="@string/prompt_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="🙌 As melhores figurinhas de fé" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColorHint="#737373"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

                <EditText
                    android:id="@+id/sticker_pack_author_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/google"
                    android:hint="@string/prompt_author"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Baixe agora" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/stickers_selected_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/google"
        android:text="@string/no_stickers_selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stickerpack_form" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_pack"
        app:layout_constraintTop_toBottomOf="@+id/stickers_selected_textview"
        app:lottie_autoPlay="true"
        app:lottie_fileName="aa.json"
        app:lottie_loop="true" />

    <GridView
        android:id="@+id/sticker_pack_grid_images_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:columnWidth="50dp"
        android:gravity="center"
        android:horizontalSpacing="8dp"
        android:numColumns="5"
        android:stretchMode="columnWidth"
        android:verticalSpacing="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_create_pack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stickers_selected_textview" />

    <FrameLayout
        android:id="@+id/btn_create_pack"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:background="@color/gren"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/StickerPreviewButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/sticker_3rdparty_wa"
            android:drawablePadding="8dp"
            android:text="@string/select_images"
            android:clickable="false"
            android:focusable="false" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>