<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/mk">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_columnWeight="1"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="3sp"
            android:layout_rowWeight="1"
            app:cardCornerRadius="8dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/dd"
                    android:layout_width="match_parent"
                    android:layout_height="150sp"
                    android:layout_above="@+id/mk"
                    android:layout_below="@+id/toolbar">




                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="110sp"
                            android:orientation="vertical"
                            >

                            <TextView
                                android:id="@+id/oracao"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:layout_margin="10sp"
                                />


                        </LinearLayout>
                    </ScrollView>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/ad_view_container"
        android:weightSum="3"
        android:gravity="center"
        >

        <ToggleButton
            android:id="@+id/play1"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:background="@drawable/bt_dialog_positive"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_margin="5sp"
            android:textAllCaps="false"
            android:fontFamily="@font/google"
            android:textColor="@android:color/white"
            android:textOff="@string/ouvir"
            android:textOn="@string/parar" />


        <Button
            android:id="@+id/nao"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_weight="1"
            android:background="@drawable/bt_dialog_positive"
            android:layout_margin="5sp"
            android:text="@string/compartilhar"
            android:textAllCaps="false"
            android:fontFamily="@font/google"
            android:textColor="@android:color/white"
            android:textSize="14sp" />


    </LinearLayout>
    <FrameLayout
        android:id="@+id/ad_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
