<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/mk"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            app:cardCornerRadius="8dp"
            app:cardElevation="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/dd"
                    android:layout_width="match_parent"
                    android:layout_height="150sp">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/b1" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="110sp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/oracao"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="10sp"
                                android:layout_weight="1"
                                android:fontFamily="@font/font"
                                android:gravity="center" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tela_banner"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <ToggleButton
            android:id="@+id/play1"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/bt_dialog_positive"
            android:fontFamily="@font/google"
            android:textOff="@string/ouvir"
            android:textOn="@string/parar"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/nao"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/bt_dialog_positive"
            android:fontFamily="@font/google"
            android:text="@string/compartilhar"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_above="@+id/tela_banner"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="20dp">

        <View
            android:id="@+id/bgCircle"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:background="@drawable/bg_circle_blue"
            android:visibility="visible" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieMusic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:visibility="gone"
            app:lottie_fileName="pause_lottie_animation.json"
            app:lottie_loop="true" />

        <ImageView
            android:id="@+id/imgMusicalNote"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:src="@drawable/musical_note"
            android:visibility="gone"
            app:tint="#FFFFFF" />

        <ToggleButton
            android:id="@+id/tgMusic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:textOff=""
            android:textOn="" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/tela_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </LinearLayout>
</RelativeLayout>